[gd_scene load_steps=30 format=3 uid="uid://ukoy104774k1"]

[ext_resource type="PackedScene" uid="uid://bq5tfgn8r368l" path="res://scenes/player.tscn" id="2_m8sf1"]
[ext_resource type="Script" path="res://scripts/Camera.gd" id="3_yyxy3"]
[ext_resource type="Texture2D" uid="uid://b6h1d5yfo1ogp" path="res://sprites/bg/wall.png" id="4_n12kh"]
[ext_resource type="PackedScene" uid="uid://ucry2jboqsjc" path="res://levels/objects/benga/benga(1a).tscn" id="5_qlsim"]
[ext_resource type="PackedScene" uid="uid://dcascrhra2oy4" path="res://levels/objects/benga/benga(1b).tscn" id="6_r01u1"]
[ext_resource type="Texture2D" uid="uid://boqdvppuc7g8p" path="res://sprites/objects/blast alien.png" id="7_4l4ws"]
[ext_resource type="Script" path="res://scripts/BlastAlien.gd" id="8_7wyc1"]
[ext_resource type="Texture2D" uid="uid://c146akfh0cxxg" path="res://sprites/objects/benga 8.png" id="9_cak75"]
[ext_resource type="Texture2D" uid="uid://bic7oe01i4vhf" path="res://sprites/objects/benga 7.png" id="9_hkbl3"]
[ext_resource type="Texture2D" uid="uid://bndtssryskey3" path="res://sprites/objects/blast alien black hole.png" id="9_nrbh8"]
[ext_resource type="Texture2D" uid="uid://bxvlyarujqke8" path="res://levels/objects/shelf longer.png" id="10_at2k2"]
[ext_resource type="Script" path="res://scripts/benga Controller.gd" id="10_h0mjx"]
[ext_resource type="Texture2D" uid="uid://btsig5vaf1px" path="res://sprites/objects/benga 10.png" id="10_vbfld"]
[ext_resource type="Texture2D" uid="uid://dywvtnu2jaivu" path="res://sprites/objects/benga 3.png" id="11_na184"]
[ext_resource type="Texture2D" uid="uid://biwoout1fb8s1" path="res://sprites/objects/table.png" id="11_ttnyv"]
[ext_resource type="Texture2D" uid="uid://bn2ck4m5wwagd" path="res://sprites/objects/benga 11.png" id="12_hqqm8"]
[ext_resource type="PackedScene" uid="uid://80o2cfjlsltr" path="res://levels/objects/gum.tscn" id="12_mlujb"]
[ext_resource type="Texture2D" uid="uid://dgyvbtlg1q5s4" path="res://sprites/objects/book 10.png" id="14_vdo7l"]
[ext_resource type="Texture2D" uid="uid://crrt5xs6n5hj7" path="res://sprites/objects/book 8.png" id="15_de15l"]
[ext_resource type="AudioStream" uid="uid://bjktexklcdri5" path="res://assets/SFX/573047__thecoolcookie17__bonk-sound-effect (mp3cut.net).mp3" id="15_qcvgj"]
[ext_resource type="PackedScene" uid="uid://do3r2faib5rf6" path="res://levels/alien/alien.tscn" id="16_5qy7l"]
[ext_resource type="AudioStream" uid="uid://c2l00qvdpp5yu" path="res://assets/audio/darkness_road_bpm165.ogg" id="21_ydr2r"]
[ext_resource type="PackedScene" uid="uid://bf1cwi7y53112" path="res://levels/objects/chess2.tscn" id="22_hqagc"]
[ext_resource type="PackedScene" uid="uid://h5cwp723qrqo" path="res://levels/objects/chess1.tscn" id="23_vb1fm"]
[ext_resource type="PackedScene" uid="uid://c0jorhiwauos" path="res://levels/objects/chess3.tscn" id="25_lyplu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h7xr"]
size = Vector2(58, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnpsk"]
size = Vector2(251.877, 182.253)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1qgu1"]
size = Vector2(1072.5, 42.059)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ppbj"]
size = Vector2(84, 73)

[node name="testlevel" type="Node2D"]
position = Vector2(12, 2)

[node name="player" parent="." groups=["player"] instance=ExtResource("2_m8sf1")]
z_index = 2
position = Vector2(-1481, 468)
shrinking = false
timer = 90

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2(117, 51)
editor_draw_limits = true
script = ExtResource("3_yyxy3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1152, 648)

[node name="Wall" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -8
position = Vector2(577, 322)
texture = ExtResource("4_n12kh")

[node name="benga tower" type="Node2D" parent="."]
z_index = 2

[node name="benga 1" type="Node2D" parent="benga tower"]

[node name="Benga" parent="benga tower/benga 1" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 2" type="Node2D" parent="benga tower"]
position = Vector2(-5, 2)

[node name="Benga1" parent="benga tower/benga 2" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 2" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 2" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 3" type="Node2D" parent="benga tower"]
position = Vector2(0, -124)

[node name="Benga" parent="benga tower/benga 3" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 4" type="Node2D" parent="benga tower"]
position = Vector2(-5, -124)

[node name="Benga1" parent="benga tower/benga 4" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 4" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 4" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 5" type="Node2D" parent="benga tower"]
position = Vector2(0, -248)

[node name="Benga" parent="benga tower/benga 5" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 6" type="Node2D" parent="benga tower"]
position = Vector2(-5, -248)

[node name="Benga1" parent="benga tower/benga 6" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 6" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 6" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 7" type="Node2D" parent="benga tower"]
position = Vector2(0, -372)

[node name="Benga" parent="benga tower/benga 7" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga 7/Benga"]
visible = false
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga7" type="Sprite2D" parent="benga tower/benga 7"]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
z_index = -1
position = Vector2(331, 491)
texture = ExtResource("9_hkbl3")

[node name="benga 8" type="Node2D" parent="benga tower"]
position = Vector2(-5, -372)

[node name="Benga1" parent="benga tower/benga 8" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga 8/Benga1"]
visible = false
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga2" parent="benga tower/benga 8" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 8" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 9" type="Node2D" parent="benga tower"]
position = Vector2(0, -496)

[node name="Benga" parent="benga tower/benga 9" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga 9/Benga"]
visible = false
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="benga 10" type="Node2D" parent="benga tower"]
position = Vector2(-5, -620)

[node name="Benga1" parent="benga tower/benga 10" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 10" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 10" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 11" type="Node2D" parent="benga tower"]
position = Vector2(0, -620)

[node name="Benga" parent="benga tower/benga 11" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 13" type="Node2D" parent="benga tower"]
position = Vector2(0, -744)

[node name="Benga" parent="benga tower/benga 13" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 12" type="Node2D" parent="benga tower"]
position = Vector2(-8, -491)

[node name="Benga1" parent="benga tower/benga 12" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 12" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 12" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 14 b" type="Node2D" parent="benga tower"]
position = Vector2(-5, -744)

[node name="Benga1" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(61, 349)
rotation = 0.343222

[node name="Benga2" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(-93, 251)
rotation = 0.132071

[node name="Benga3" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(679, 322)
rotation = -0.314521

[node name="Benga" parent="benga tower/benga 14 b" instance=ExtResource("5_qlsim")]
position = Vector2(294, 65)

[node name="Benga4" parent="benga tower/benga 14 b" instance=ExtResource("5_qlsim")]
position = Vector2(608, -31)
rotation = -0.0176325

[node name="Benga5" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(683, 154)
rotation = 0.343222

[node name="Benga6" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(387, 183)
rotation = 0.343222

[node name="Benga7" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(-378, 134)
rotation = -1.30971

[node name="Benga8" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(995, 125)
rotation = -1.30971

[node name="Benga9" parent="benga tower/benga 14 b" instance=ExtResource("5_qlsim")]
position = Vector2(123, 450)
rotation = 0.470692

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga 14 b"]
position = Vector2(355, 266)
scale = Vector2(4.5, 4.5)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga10" parent="benga tower/benga 14 b" instance=ExtResource("6_r01u1")]
position = Vector2(505, -196)
rotation = -0.0535601

[node name="BlastAlienBlackHole" type="Sprite2D" parent="benga tower/benga 14 b"]
z_index = -1
position = Vector2(417, 363)
scale = Vector2(2, 2)
texture = ExtResource("9_nrbh8")

[node name="benga 14" type="Node2D" parent="benga tower"]
position = Vector2(-53, -1479)

[node name="Benga1" parent="benga tower/benga 14" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 14" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 14" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="Benga8" type="Sprite2D" parent="benga tower/benga 14"]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
z_index = -1
position = Vector2(448, 644)
rotation = 1.56924
texture = ExtResource("9_cak75")

[node name="Benga10" type="Sprite2D" parent="benga tower/benga 14"]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
z_index = -1
position = Vector2(289, 643)
rotation = 1.57922
texture = ExtResource("10_vbfld")

[node name="Benga4" type="Sprite2D" parent="benga tower/benga 14"]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
z_index = -1
position = Vector2(229, 644)
rotation = 1.56733
texture = ExtResource("11_na184")

[node name="Benga5" type="Sprite2D" parent="benga tower/benga 14"]
modulate = Color(0.447059, 0.447059, 0.447059, 1)
z_index = -1
position = Vector2(361, 645)
rotation = 1.57539
texture = ExtResource("11_na184")

[node name="benga 15" type="Node2D" parent="benga tower"]
position = Vector2(-47, -1480)

[node name="Benga" parent="benga tower/benga 15" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 16" type="Node2D" parent="benga tower"]
position = Vector2(-49, -1608)

[node name="Benga" parent="benga tower/benga 16" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 17" type="Node2D" parent="benga tower"]
position = Vector2(-57, -1609)

[node name="Benga1" parent="benga tower/benga 17" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 17" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 17" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 18" type="Node2D" parent="benga tower"]
position = Vector2(-52, -1732)

[node name="Benga" parent="benga tower/benga 18" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga 19" type="Node2D" parent="benga tower"]
position = Vector2(-57, -1726)

[node name="Benga1" parent="benga tower/benga 19" instance=ExtResource("6_r01u1")]
position = Vector2(241, 432)

[node name="Benga2" parent="benga tower/benga 19" instance=ExtResource("6_r01u1")]
position = Vector2(334, 432)

[node name="Benga3" parent="benga tower/benga 19" instance=ExtResource("6_r01u1")]
position = Vector2(428, 432)

[node name="benga 20" type="Node2D" parent="benga tower"]
position = Vector2(-48, -1851)

[node name="Benga" parent="benga tower/benga 20" instance=ExtResource("5_qlsim")]
position = Vector2(334, 496)

[node name="benga left" type="Node2D" parent="benga tower"]
position = Vector2(-102, -3295)

[node name="Benga1" parent="benga tower/benga left" instance=ExtResource("6_r01u1")]
position = Vector2(260, 377)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga left/Benga1"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga4" parent="benga tower/benga left" instance=ExtResource("6_r01u1")]
position = Vector2(259, 448)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga left/Benga4"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga5" parent="benga tower/benga left" instance=ExtResource("6_r01u1")]
position = Vector2(254, 241)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga left/Benga5"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga6" parent="benga tower/benga left" instance=ExtResource("6_r01u1")]
position = Vector2(255, 309)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga left/Benga6"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="benga right" type="Node2D" parent="benga tower"]
position = Vector2(-102, -3295)

[node name="Benga2" parent="benga tower/benga right" instance=ExtResource("6_r01u1")]
position = Vector2(472, 382)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga right/Benga2"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga3" parent="benga tower/benga right" instance=ExtResource("6_r01u1")]
position = Vector2(472, 450)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga right/Benga3"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga4" parent="benga tower/benga right" instance=ExtResource("6_r01u1")]
position = Vector2(474, 316)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga right/Benga4"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="Benga5" parent="benga tower/benga right" instance=ExtResource("6_r01u1")]
position = Vector2(472, 249)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/benga right/Benga5"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="LoneBenga" parent="benga tower" instance=ExtResource("5_qlsim")]
position = Vector2(623, -3177)

[node name="BlastAlien" type="Sprite2D" parent="benga tower/LoneBenga"]
position = Vector2(6, -4)
texture = ExtResource("7_4l4ws")
script = ExtResource("8_7wyc1")

[node name="decrotaive jenga" type="Node2D" parent="benga tower"]

[node name="Benga8" type="Sprite2D" parent="benga tower/decrotaive jenga"]
position = Vector2(330, -127)
texture = ExtResource("9_cak75")

[node name="Benga11" type="Sprite2D" parent="benga tower/decrotaive jenga"]
position = Vector2(332, -254)
texture = ExtResource("12_hqqm8")

[node name="Benga12" type="Sprite2D" parent="benga tower/decrotaive jenga"]
position = Vector2(334, 491)
texture = ExtResource("12_hqqm8")

[node name="Benga11" type="Sprite2D" parent="benga tower/decrotaive jenga/Benga12"]
position = Vector2(-53, -1728)
texture = ExtResource("12_hqqm8")

[node name="benga Controller" type="Node" parent="."]
script = ExtResource("10_h0mjx")

[node name="badonk" type="AudioStreamPlayer2D" parent="benga Controller"]
stream = ExtResource("15_qcvgj")

[node name="Benga movement1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Benga movement1"]
position = Vector2(175, 240)
shape = SubResource("RectangleShape2D_4h7xr")

[node name="Shelf" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(1428, -150)
scale = Vector2(2.93, 2.93)
texture = ExtResource("10_at2k2")

[node name="StaticBody2D" type="StaticBody2D" parent="Shelf"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shelf/StaticBody2D"]
position = Vector2(-109.898, -391.467)
shape = SubResource("RectangleShape2D_dnpsk")

[node name="Book10" type="Sprite2D" parent="Shelf"]
position = Vector2(21.843, -108.874)
scale = Vector2(0.341297, 0.341297)
texture = ExtResource("14_vdo7l")

[node name="Book8" type="Sprite2D" parent="Shelf"]
position = Vector2(-145.051, 78.4983)
scale = Vector2(0.341297, 0.341297)
texture = ExtResource("15_de15l")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(330, 1520)
scale = Vector2(3.6, 3.4)
texture = ExtResource("11_ttnyv")

[node name="StaticBody2D" type="StaticBody2D" parent="Table"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Table/StaticBody2D"]
position = Vector2(-15.1389, -271.324)
shape = SubResource("RectangleShape2D_1qgu1")

[node name="gum" parent="." instance=ExtResource("12_mlujb")]
position = Vector2(291, -716)
scale = Vector2(0.395, 0.715)

[node name="Benga movement2" type="Area2D" parent="."]
position = Vector2(298, -1089)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Benga movement2"]
position = Vector2(175, 240)
shape = SubResource("RectangleShape2D_4h7xr")

[node name="alien" parent="." instance=ExtResource("16_5qy7l")]
position = Vector2(-717, -481)
isplaying = true

[node name="alien2" parent="." instance=ExtResource("16_5qy7l")]
z_index = -1
position = Vector2(607, -168)
isplaying = true
flipsprite = true

[node name="Benga movement3" type="Area2D" parent="."]
position = Vector2(89, -1688)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Benga movement3"]
position = Vector2(304, 261.5)
shape = SubResource("RectangleShape2D_5ppbj")

[node name="music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(282, -1099)
stream = ExtResource("21_ydr2r")
volume_db = -10.0
autoplay = true
max_distance = 5000.0

[node name="chess1" parent="." instance=ExtResource("22_hqagc")]
position = Vector2(-1147, 484)

[node name="chess2" parent="." instance=ExtResource("23_vb1fm")]
position = Vector2(-1247, 484)
rotation = -1.73341

[node name="chess3" parent="." instance=ExtResource("25_lyplu")]
position = Vector2(-1045, 474)
rotation = -0.909572

[connection signal="body_entered" from="Benga movement1" to="benga Controller" method="_on_benga_movement_1_body_entered"]
[connection signal="body_entered" from="Benga movement2" to="benga Controller" method="_on_benga_movement_2_body_entered"]
[connection signal="body_entered" from="Benga movement3" to="benga Controller" method="_on_benga_movement_3_body_entered"]
